Move styles to dedicated folder; Fix dark mode detection bug by manually adding theme styles with overrides for Chat component

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -19,20 +19,3 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
-
-.nlux-launchPad-container {
-  min-height: 22rem;
-}
-
-.nlux-comp-welcomeMessage {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  max-width: 30rem;
-  margin: auto;
-}
